backend/czconnect-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: czconnect-backend
  name: czconnect-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: czconnect-backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-czconnect: "true"
        io.kompose.service: czconnect-backend
    spec:
      containers:
        - env:
            - name: ASPNETCORE_URLS
              valueFrom:
                configMapKeyRef:
                  key: ASPNETCORE_URLS
                  name: env
          image: czconnect-backend
          name: czconnect-backend
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
