backend/mssql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mssql-db
  name: mssql-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mssql-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/backend-czconnect: "true"
        io.kompose.service: mssql-db
    spec:
      containers:
        - env:
            - name: ACCEPT_EULA
              value: "Y"
            - name: MSSQL_SA_PASSWORD
              value: '"3Q%8C7`5e_dXZ#H'
          image: mcr.microsoft.com/mssql/server:2022-latest
          name: mssql-db
          ports:
            - containerPort: 1433
          resources: {}
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssql
      restartPolicy: Always
      volumes:
        - name: mssql
          persistentVolumeClaim:
            claimName: mssql
status: {}
